Fixing layout bug when adding subchanels fix #442

--- a/src/resources/css/common/LocalTrack.css
+++ b/src/resources/css/common/LocalTrack.css
@@ -2,6 +2,12 @@
     This file contains stylesheet related to local/user tracks. Many details about the tracks are defined in BaseTrack.css file.
 */
 
+LocalTrackView[unlighted="true"] FxPanelItem,
+FxPanelItem[containPlugin="false"]
+{
+    min-height: 14px; /* fixing #442 */
+}
+
 
 /* LocalTrackView is widget used to show the user tracks/subchannels.
 ----------------------------------------------------------------------*/
